--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,10 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8ef0ea">  <td>23/01/24 17:42:58</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="getIssue.getIssued()[pri:0, instance:jiraAPI.getIssue@d5b810e]">getIssued</td> 
-  <td>main@1574877131</td>   <td></td> </tr>
-<tr bgcolor="f9b8be">  <td>23/01/24 17:43:00</td>   <td>1725</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="editIssue.editIssued()[pri:0, instance:jiraAPI.editIssue@43dac38f]">editIssued</td> 
-  <td>main@1574877131</td>   <td></td> </tr>
-<tr bgcolor="e5eea7">  <td>23/01/24 17:42:55</td>   <td>-3168</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="cookieAuth.session()[pri:0, instance:jiraAPI.cookieAuth@543588e6]">session</td> 
-  <td>main@1574877131</td>   <td></td> </tr>
+<tr bgcolor="f9b8be">  <td>23/01/25 11:59:50</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="getIssue.getIssued()[pri:0, instance:jiraAPI.getIssue@c88a337]">getIssued</td> 
+  <td>main@1497377679</td>   <td></td> </tr>
+<tr bgcolor="ae7977">  <td>23/01/25 11:59:50</td>   <td>98</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="attachment.attachmentd()[pri:0, instance:jiraAPI.attachment@5d0a1059]">attachmentd</td> 
+  <td>main@1497377679</td>   <td></td> </tr>
+<tr bgcolor="8ffcb7">  <td>23/01/25 11:59:48</td>   <td>-1740</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="createIssue.issueCreation()[pri:0, instance:jiraAPI.createIssue@43dac38f]">issueCreation</td> 
+  <td>main@1497377679</td>   <td></td> </tr>
+<tr bgcolor="e5eea7">  <td>23/01/25 11:59:45</td>   <td>-5164</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="cookieAuth.session()[pri:0, instance:jiraAPI.cookieAuth@4fb3ee4e]">session</td> 
+  <td>main@1497377679</td>   <td></td> </tr>
+<tr bgcolor="8ef0ea">  <td>23/01/25 11:59:50</td>   <td>-164</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="editIssue.editIssued()[pri:0, instance:jiraAPI.editIssue@342c38f8]">editIssued</td> 
+  <td>main@1497377679</td>   <td></td> </tr>
 </table>
