--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,15 +8,13 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Suite</th></tr>
-<tr><td><a href="#t0">Test</a></td><td class="num">5</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">5,602</td><td></td><td></td></tr>
+<tr><th colspan="8">Default suite</th></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">6,374</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">jiraAPI.attachment</td><td><a href="#m0">attachmentd</a></td><td rowspan="1">1674665990571</td><td rowspan="1">233</td></tr><tr class="passedodd"><td rowspan="1">jiraAPI.cookieAuth</td><td><a href="#m1">session</a></td><td rowspan="1">1674665985310</td><td rowspan="1">3412</td></tr><tr class="passedeven"><td rowspan="1">jiraAPI.createIssue</td><td><a href="#m2">issueCreation</a></td><td rowspan="1">1674665988733</td><td rowspan="1">1571</td></tr><tr class="passedodd"><td rowspan="1">jiraAPI.editIssue</td><td><a href="#m3">editIssued</a></td><td rowspan="1">1674665990309</td><td rowspan="1">160</td></tr><tr class="passedeven"><td rowspan="1">jiraAPI.getIssue</td><td><a href="#m4">getIssued</a></td><td rowspan="1">1674665990473</td><td rowspan="1">93</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">reqRespSpec.reqres</td><td><a href="#m0">addplace</a></td><td rowspan="1">1674862138849</td><td rowspan="1">3568</td></tr><tr class="passedeven"><td><a href="#m1">getpla</a></td><td rowspan="1">1674862143980</td><td rowspan="1">1174</td></tr><tr class="passedeven"><td><a href="#m2">updatepla</a></td><td rowspan="1">1674862142424</td><td rowspan="1">1553</td></tr></tbody>
 </table>
-<h2>Test</h2><h3 id="m0">jiraAPI.attachment#attachmentd</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">jiraAPI.cookieAuth#session</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">jiraAPI.createIssue#issueCreation</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">jiraAPI.editIssue#editIssued</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m4">jiraAPI.getIssue#getIssued</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">reqRespSpec.reqres#addplace</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">reqRespSpec.reqres#getpla</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">reqRespSpec.reqres#updatepla</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
