rest assured login

--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\mathu\AppData\Local\Temp\testng-eclipse-242889720\testng-customsuite.xml</span>
+                    <span>C:\Users\mathu\AppData\Local\Temp\testng-eclipse--2069816530\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">3 methods,   3 passed</span>
+                    <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -103,17 +103,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="reqRespSpec.reqres" class="method navigator-link" hash-for-method="addplace">addplace</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="reqRespSpec.reqres" class="method navigator-link" hash-for-method="getpla">getpla</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="reqRespSpec.reqres" class="method navigator-link" hash-for-method="updatepla">updatepla</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="API_E2E.login" class="method navigator-link" hash-for-method="loginTC">loginTC</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -131,28 +121,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">reqRespSpec.reqres</span>
+              <span class="class-name">API_E2E.login</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="addplace">
-                  </a> <!-- addplace -->
-                  <span class="method-name">addplace</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="getpla">
-                  </a> <!-- getpla -->
-                  <span class="method-name">getpla</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="updatepla">
-                  </a> <!-- updatepla -->
-                  <span class="method-name">updatepla</span>
+                  <a name="loginTC">
+                  </a> <!-- loginTC -->
+                  <span class="method-name">loginTC</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -160,7 +136,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\mathu\AppData\Local\Temp\testng-eclipse-242889720\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\mathu\AppData\Local\Temp\testng-eclipse--2069816530\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -169,7 +145,11 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;reqRespSpec.reqres&quot;/&gt;
+      &lt;class name=&quot;API_E2E.login&quot;&gt;
+        &lt;methods&gt;
+          &lt;include name=&quot;loginTC&quot;/&gt;
+        &lt;/methods&gt;
+      &lt;/class&gt; &lt;!-- API_E2E.login --&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -209,24 +189,16 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(3);
+data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'addplace')
-data.setCell(0, 2, 'reqRespSpec.reqres')
-data.setCell(0, 3, 3568);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'updatepla')
-data.setCell(1, 2, 'reqRespSpec.reqres')
-data.setCell(1, 3, 1553);
-data.setCell(2, 0, 2)
-data.setCell(2, 1, 'getpla')
-data.setCell(2, 2, 'reqRespSpec.reqres')
-data.setCell(2, 3, 1174);
+data.setCell(0, 1, 'loginTC')
+data.setCell(0, 2, 'API_E2E.login')
+data.setCell(0, 3, 3902);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 6 seconds</span>
+              <span class="suite-total-time">Total running time: 3 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -252,18 +224,10 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">reqRespSpec.reqres</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">API_E2E.login</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">addplace</span>
+                <span class="method-name">loginTC</span>
                 <span class="method-start">0 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">updatepla</span>
-                <span class="method-start">3575 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">getpla</span>
-                <span class="method-start">5131 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
