--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a9717e">  <td>23/01/27 18:28:58</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="reqres.addplace()[pri:1, instance:reqRespSpec.reqres@78e4deb0]">addplace</td> 
-  <td>main@347978868</td>   <td></td> </tr>
-<tr bgcolor="a9717e">  <td>23/01/27 18:29:03</td>   <td>5132</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="reqres.getpla()[pri:3, instance:reqRespSpec.reqres@78e4deb0]">getpla</td> 
-  <td>main@347978868</td>   <td></td> </tr>
-<tr bgcolor="a9717e">  <td>23/01/27 18:29:02</td>   <td>3576</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="reqres.updatepla()[pri:2, instance:reqRespSpec.reqres@78e4deb0]">updatepla</td> 
-  <td>main@347978868</td>   <td></td> </tr>
+<tr bgcolor="e1dd88">  <td>23/01/30 21:44:22</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="login.loginTC()[pri:0, instance:API_E2E.login@6892b3b6]">loginTC</td> 
+  <td>main@1764996806</td>   <td></td> </tr>
 </table>
